--- a/bracketizer/templates/index.html
+++ b/bracketizer/templates/index.html
@@ -8,7 +8,7 @@
         <a href="{{ url_for('bracket.bracket', bracket=bracket.name) }}">{{ bracket.name }}</a>:
         {{ bracket.total_rounds() }} rounds
         ({{ bracket.start_time }} - {{ bracket.end_time }})
-{#        [<a href="{{ url_for('bracket', bracket=bracket.name) }}">view</a>]#}
+        [<a href="{{ url_for('vote.vote', bracket=bracket.name) }}">Vote</a>]
 {#        [<a href="{{ url_for('votes', bracket=bracket.name) }}">Total score</a>]#}
     </li>
 {% endfor %}
