--- a/bracketizer/templates/bracket.html
+++ b/bracketizer/templates/bracket.html
@@ -3,7 +3,7 @@
 
 {% block content %}
 
-    <h2>Your Votes for {{ bracket.name}}</h2>
+    <h2>{{ bracket.name}}</h2>
 
     <table class="table table-borderless table-striped">
     <thead>
